<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#66000000"
    android:orientation="horizontal"
    android:padding="5dip" >

    <!-- ListRow Left side Thumbnail image -->

    <LinearLayout
        android:id="@+id/thumbnail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="5dip"
        android:padding="3dip" >

        <ImageView
            android:id="@+id/controlImage"
            android:layout_width="40dip"
            android:layout_height="40dip"
            android:layout_gravity="top"
            android:contentDescription="@string/app_name"
            android:src="@drawable/sunny" />
    </LinearLayout>

    <!-- Rightend Arrow -->

    <ImageView
        android:id="@+id/controlImageArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/arrow" />

    <!-- City -->

    <TextView
        android:id="@+id/controlName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/controlImage"
        android:layout_centerVertical="true"
        android:layout_marginLeft="75dip"
        android:layout_toRightOf="@+id/controlImage"
        android:paddingBottom="9dip"
        android:text="@string/strCity"
        android:textColor="#FFD801"
        android:textSize="15dip"
        android:textStyle="bold"
        android:typeface="sans" />

    <!-- Weather Information -->

    <TextView
        android:id="@+id/controlState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/controlImage"
        android:layout_alignLeft="@+id/controlName"
        android:layout_below="@+id/controlName"
        android:layout_centerHorizontal="true"
        android:paddingTop="5dip"
        android:text="@string/strWeather"
        android:textColor="#FFD801"
        android:textSize="10dip" />

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/controlName"
        android:layout_centerVertical="true"
        android:layout_marginRight="20dip"
        android:layout_toLeftOf="@+id/controlImageArrow"
        android:text="@string/strTemp"
        android:textColor="#FFD801"
        android:textSize="20dip" />

</RelativeLayout>